@@ -1,7 +1,5 @@
 package com.heanbian.block.util;
 
-import static java.util.stream.Collectors.toList;
-
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
@@ -21,11 +19,11 @@ public final class LocalDateTimeUtils {
 
 	public static List<LocalDate> betweenDays(final LocalDate start, final LocalDate end) {
 		long len = ChronoUnit.DAYS.between(start, end);
-		return Stream.iterate(start, d -> d.plusDays(1)).limit(len + 1).collect(toList());
+		return Stream.iterate(start, d -> d.plusDays(1)).limit(len + 1).toList();
 	}
 
 	public static List<LocalDateTime> betweenDays(final LocalDateTime start, final LocalDateTime end) {
 		long len = ChronoUnit.DAYS.between(start, end);
-		return Stream.iterate(start, d -> d.plusDays(1)).limit(len + 1).collect(toList());
+		return Stream.iterate(start, d -> d.plusDays(1)).limit(len + 1).toList();
 	}
 }
